Use Java 16+ toList() and improve code documentation
Co-authored-by: LeizarM <74875192+LeizarM@users.noreply.github.com>